[gd_scene load_steps=12 format=3 uid="uid://btdcesgatywm3"]

[ext_resource type="Script" path="res://scripts/globals.gd" id="1_sf5ct"]
[ext_resource type="FontFile" uid="uid://bkdup4giffeyl" path="res://resources/fonts/sandfont.ttf" id="2_mmwod"]
[ext_resource type="AudioStream" uid="uid://b36bstfbfqovo" path="res://audio/sfx/three_two_one_go.mp3" id="3_k8chj"]
[ext_resource type="AudioStream" uid="uid://cara1ph31lqoc" path="res://audio/sfx/you_win.mp3" id="4_68hwq"]
[ext_resource type="AudioStream" uid="uid://ubmnl2s62v1y" path="res://audio/sfx/times_up.mp3" id="5_nvjsy"]
[ext_resource type="AudioStream" uid="uid://x35ixp8s7r86" path="res://audio/music/epic_beat_layer_calm.ogg" id="6_f6cn5"]
[ext_resource type="AudioStream" uid="uid://dstpxkkbbtn2s" path="res://audio/music/epic_beat_layer_intense.ogg" id="7_8axbt"]

[sub_resource type="LabelSettings" id="LabelSettings_qrm1p"]
font = ExtResource("2_mmwod")
font_color = Color(0.972549, 0.972549, 0.760784, 1)

[sub_resource type="LabelSettings" id="LabelSettings_cul27"]
font_size = 80
font_color = Color(0.184314, 0.282353, 0.345098, 1)
outline_size = 45
outline_color = Color(0.972549, 0.972549, 0.760784, 1)

[sub_resource type="Animation" id="Animation_teh0p"]
resource_name = "start_text"
length = 2.5
step = 0.01
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.22, 0.96, 1.58, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": ["3"],
"method": &"text_popup"
}, {
"args": ["2"],
"method": &"text_popup"
}, {
"args": ["1"],
"method": &"text_popup"
}, {
"args": ["GO!"],
"method": &"text_popup"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o3w11"]
_data = {
"start_text": SubResource("Animation_teh0p")
}

[node name="globals" type="Node"]
script = ExtResource("1_sf5ct")

[node name="interface" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="interface"]
offset_left = 421.0
offset_right = 512.0
offset_bottom = 38.0
color = Color(0.184314, 0.282353, 0.345098, 1)

[node name="timer_text" type="Label" parent="interface"]
offset_left = 427.0
offset_top = 3.0
offset_right = 505.0
offset_bottom = 26.0
text = "15.00"
label_settings = SubResource("LabelSettings_qrm1p")

[node name="big_text" type="Label" parent="interface"]
modulate = Color(1, 1, 1, 0)
offset_right = 512.0
offset_bottom = 384.0
pivot_offset = Vector2(256, 192)
text = "YOU LOSE!"
label_settings = SubResource("LabelSettings_cul27")
horizontal_alignment = 1
vertical_alignment = 1

[node name="start" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_k8chj")

[node name="win" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_68hwq")

[node name="lose" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_nvjsy")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o3w11")
}

[node name="music_calm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_f6cn5")

[node name="music_intense" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_8axbt")
volume_db = -80.0
